<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayoutActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/undoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/colorUndoBtn" />

        <Button
            android:id="@+id/redoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/colorRedoBtn" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/colorSaveBtn" />
    </LinearLayout>

    <com.dastardlylabs.artsy.brushStrokes.DrawingSurface
        android:id="@+id/drawingSurface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/LinearLayoutPalette"
        android:layout_below="@+id/LinearLayoutActions" />

    <LinearLayout
        android:id="@+id/LinearLayoutPalette"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/colorRedBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/colorRedBtn" />

        <Button
            android:id="@+id/colorBlueBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/colorBlueBtn" />

        <Button
            android:id="@+id/colorGreenBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/colorGreenBtn" />

        <Button
            android:id="@+id/circleBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/colorCircleBtn" />

        <Button
            android:id="@+id/pathBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/colorPathBtn" />
    </LinearLayout>

</RelativeLayout>