<?xml version="1.0" encoding="utf-8"?>
<SlidingDrawer xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/colorPalatteDrawer"
    android:background="#00000000"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:handle="@+id/colorDrawerHandle"
    android:content="@+id/colorDrawerContent" >
    <!-- 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    -->
    
    <Button
            android:id="@+id/colorDrawerHandle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Color" />

        <LinearLayout
            android:id="@+id/colorDrawerContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/colorRedBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colorRedBtn" />

            <Button
                android:id="@+id/colorBlueBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colorBlueBtn" />

            <Button
                android:id="@+id/colorGreenBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colorGreenBtn" />
        </LinearLayout>

</SlidingDrawer>